Change endpoint name from Events to Sessions
